[package]
name = "kvs"
version = "0.1.0"
authors = ["JunBin <jiao.junbin@outlook.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.27"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
walkdir = "2.4.0"
